fix(problems) STAC-17327 | fix required fields

--- a/spec/problems.api.yaml
+++ b/spec/problems.api.yaml
@@ -156,9 +156,9 @@ components:
       required:
         - _type
         - message
-        - topologyTime
+        - topologyTimeMs
         - lowerBoundMs
-        - upperBoundMs
+        - upperBound
     GetCausingEventsNotFound:
       oneOf:
         - $ref: "#/components/schemas/ProblemNotFound"
