feat(problems): STAC-17327 | add timeoutSeconds field to the timeout response

--- a/spec/problems.api.yaml
+++ b/spec/problems.api.yaml
@@ -253,6 +253,9 @@ components:
             - GetTopologyTimeout
         message:
           type: string
+        timeoutSeconds:
+          type: integer
       required:
         - _type
         - message
+        - timeoutSeconds
