STAC-17794 fixed discriminator in problems file

--- a/spec/problems.api.yaml
+++ b/spec/problems.api.yaml
@@ -118,7 +118,7 @@ components:
         _type:
           type: string
           enum:
-            - TooManyTopologyResults
+            - CausingEventsAreNotAvailableForTheTime
       required:
         - _type
     GetCausingEventsBadRequest:
